# recipe-assistant

./: .gitignore
.github/workflows/: build-mobile.yml  deploy-backend.yml
apps/backend/: Dockerfile  compose.yaml  docker-entrypoint.sh  dropbox_client.py  intent.py  main.py  pyproject.toml  recipes.json  requirements.txt
apps/backend/core/: bootstrap.py  dependencies.py  groq_prompt.txt  helpers.py  settings.py
apps/backend/models/: models.py
apps/backend/pipeline/: pdf_ingestion_pipeline.py
apps/backend/repositories/: recipe_repository.py
apps/backend/routers/: chat.py  health.py  images.py  ingestion.py  recipes.py
apps/backend/services/: groq_service.py  image_extractor.py  pdf_parser.py  recipe_scaler.py  recipe_service.py  search_index.py  search_parser.py  search_service.py
apps/backend/sources/: base.py  dropbox_source.py
apps/backend/storage/: base.py  gcs_storage.py  ingestion_state.py
apps/backend/tests/: test_chat.py  test_recipe.py
apps/backend/utils/: exceptions.py  logger.py  retry.py
apps/mobile/: App.js  app.config.js  app.config.ts  package-lock.json  package.json
apps/mobile/__tests__/: AddRecipeModal.test.js  RecipeModal.test.js
apps/mobile/components/: ChatMessages.js  CheatSheet.js  Header.js  InputArea.js  LoadingOverlay.js  RecipeCard.js  TagFilters.js
apps/mobile/constants/: tags.js
apps/mobile/hooks/: useChat.js
apps/mobile/modals/: AddRecipeModal.js  EditRecipeModal.js  RecipeModal.js  SyncResultModal.js
