[project]
name = "recipe-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "groq",
    "python-dotenv",
    "pydantic",
    "dropbox>=12.0.2",
    "pymupdf>=1.27.2.3",
    "google-cloud-storage>=3.13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
